alb.tf
resource "aws_alb" "main" {
	name 		= "karthikset-load-balancer"
	subnets		= aws_subnet.public.*.id
	security_groups	= [aws_security_group.lb.id]
}

resource "aws_alb_target_group" "app" { 
	name 		= "karthikset-target-group"
	port		= 80
	protocol	= "HTTP"
	vpc_id		= aws_vpc.main.id
	target_type	= "ip"
	
	health_check{
		health_threshold 	= "3"
		interval		= "30"
		protocol		= "HTTP"
		matcher			= "200"
		timeout			= "3"
		path			= var.health_check_path
		unhealthy_threshold 	= "2"
}

}


# Redirect all traffic from the ALB to the tatrget group 

resource "aws_alb_listener" "front_end" {
	load_balance_arn	= aws_alb.main.id
	port			= var.app.port
	protocol		= "HTTP"

	default_action	{
	 target_group_arn = aws_alb_target_group.app.id
	 type		  = "forward"
}

}
